refactor(refatorando controle de exceptions)